--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@solana/wallet-adapter-wallets": "^0.19.2",
     "ant-design-vue": "^3.2.13",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
     "solana-wallets-vue": "^0.4.5",
     "vue": "^3.2.13"
@@ -21,7 +22,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
+    "vue-drawing-canvas": "^1.0.14"
   },
   "eslintConfig": {
     "root": true,
