--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
     "ant-design-vue": "^3.2.13",
     "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
+    "ipfs": "^0.64.2",
+    "ipfs-http-client": "^58.0.1",
     "solana-wallets-vue": "^0.4.5",
     "vue": "^3.2.13"
   },
